force-app/main/default/objects/SEG_ClasificacionRapida__c/SEG_ClasificacionRapida__c.object-meta.xml
<CustomObject>
    <label>Clasificación Rápida</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clasificación Rápida</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>