force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/CBK_Negocio__c.field-meta.xml
<CustomField>
    <fullName>CBK_Negocio__c</fullName>
    <label>Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segmentos</fullName>
            </value>
            <value>
                <fullName>Cops</fullName>
            </value>
            <value>
                <fullName>SAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>