force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/OS_Causa__c.field-meta.xml
<CustomField>
    <fullName>OS_Causa__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Causa</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Causa</value>
        </filterItems>
        <filterItems>
            <field>$Source.CBK_Negocio__c</field>
            <operation>equals</operation>
            <value>Cops</value>
        </filterItems>
        <filterItems>
            <field>CC_MCC__c.CC_Tipo_Cliente__c</field>
            <operation>equals</operation>
            <value>Cliente (COPS), Empleado (COPS), Cliente (COPS)/Empleado (COPS)</value>
        </filterItems>
        <filterItems>
            <field>$Source.SEG_Motivo__c</field>
            <operation>equals</operation>
            <valueField>CC_MCC__c.CC_Motivo__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Clasificación Rápida (Causa)</relationshipLabel>
    <relationshipName>OS_Causa</relationshipName>
    <type>Lookup</type>
</CustomField>