force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/OS_Departamento__c.field-meta.xml
<CustomField>
    <fullName>OS_Departamento__c</fullName>
    <formula>TEXT(SEG_Tematica__r.OS_Departamento__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Departamento</label>
    <type>Text</type>
</CustomField>