force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/OS_EstadoCaso__c.field-meta.xml
<CustomField>
    <fullName>OS_EstadoCaso__c</fullName>
    <label>Estado caso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CBK_Negocio__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cerrado</fullName>
            </value>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Rechazado</fullName>
            </value>
            <value>
                <fullName>Pendiente Colaborador</fullName>
            </value>
            <value>
                <fullName>Pendiente Cliente</fullName>
            </value>
            <value>
                <fullName>Pendiente Incidencia</fullName>
            </value>
            <value>
                <fullName>Pendiente Interno</fullName>
            </value>
            <value>
                <fullName>Pendiente Revisión</fullName>
            </value>
            <value>
                <fullName>Pendiente Alerta</fullName>
            </value>
            <value>
                <fullName>SAC_013</fullName>
                <label>Descartada</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>