force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/OS_GrupoTrabajo__c.field-meta.xml
<CustomField>
    <fullName>OS_GrupoTrabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Trabajo</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2</booleanFilter>
        <filterItems>
            <field>$Source.CBK_Negocio__c</field>
            <operation>equals</operation>
            <value>Cops</value>
        </filterItems>
        <filterItems>
            <field>CC_Grupo_Colaborador__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Grupo de Trabajo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_Grupo_Colaborador__c</referenceTo>
    <relationshipLabel>Clasificación Rápida</relationshipLabel>
    <relationshipName>OS_Grupo_Trabajo</relationshipName>
    <type>Lookup</type>
</CustomField>