force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/OS_Solucion__c.field-meta.xml
<CustomField>
    <fullName>OS_Solucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solución</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Solución</value>
        </filterItems>
        <filterItems>
            <field>$Source.OS_Causa__c</field>
            <operation>equals</operation>
            <valueField>CC_MCC__c.CC_Causa__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CBK_Negocio__c</field>
            <operation>equals</operation>
            <value>Cops</value>
        </filterItems>
        <filterItems>
            <field>CC_MCC__c.CC_Tipo_Cliente__c</field>
            <operation>equals</operation>
            <value>Cliente (COPS), Empleado (COPS), Cliente (COPS)/Empleado (COPS)</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Clasificación Rápida (Solución)</relationshipLabel>
    <relationshipName>OS_Solucion</relationshipName>
    <type>Lookup</type>
</CustomField>