force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SAC_Target__c.field-meta.xml
<CustomField>
    <fullName>SAC_Target__c</fullName>
    <description>Campo para determinar sobre que tipo de caso queremos que se aplique la clasificación rápida</description>
    <label>Aplicar en</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_Reclamacion</fullName>
                <label>Reclamación</label>
            </value>
            <value>
                <fullName>SAC_Consulta</fullName>
                <label>Consulta COPS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>