force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_Canaldeentrada__c.field-meta.xml
<CustomField>
    <fullName>SEG_Canaldeentrada__c</fullName>
    <label>Canal de entrada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Canal BPO</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>WebService</fullName>
            </value>
            <value>
                <fullName>Paquetería</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
                <label>Teléfono</label>
            </value>
            <value>
                <fullName>Muro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>