force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_CRAuditoria__c.field-meta.xml
<CustomField>
    <fullName>SEG_CRAuditoria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CR Auditoría</label>
    <type>Checkbox</type>
</CustomField>