force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_CRContratos__c.field-meta.xml
<CustomField>
    <fullName>SEG_CRContratos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CR Contratos</label>
    <type>Checkbox</type>
</CustomField>