force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_Nombre_CR_Cognitive__c.field-meta.xml
<CustomField>
    <fullName>SEG_Nombre_CR_Cognitive__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Nombre CR Cognitive</label>
    <length>255</length>
    <type>Text</type>
</CustomField>