force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_Prioridad__c.field-meta.xml
<CustomField>
    <fullName>SEG_Prioridad__c</fullName>
    <label>Prioridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
                <label>Baja</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <label>Media</label>
            </value>
            <value>
                <fullName>High</fullName>
                <label>Alta</label>
            </value>
            <value>
                <fullName>Critical</fullName>
                <label>Crítica</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>