force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_Producto__c.field-meta.xml
<CustomField>
    <fullName>SEG_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Se debe añadir un Producto del Tipo Segmentos.</errorMessage>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>B - Producto/Servicio</value>
        </filterItems>
        <filterItems>
            <field>CC_MCC__c.CC_Tipo_Cliente__c</field>
            <operation>equals</operation>
            <value>Segmentos, Segmentos FFEE, Segmentos CSE, Segmentos BC CE INST, Cliente (COPS), Empleado (COPS), Cliente (COPS)/Empleado (COPS)</value>
        </filterItems>
        <filterItems>
            <field>$Source.SEG_Tematica__c</field>
            <operation>equals</operation>
            <valueField>CC_MCC__c.CC_Tematica__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Clasificación Rápida (Producto)</relationshipLabel>
    <relationshipName>SEG_ClasificacionRapida_Producto</relationshipName>
    <type>Lookup</type>
</CustomField>