force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_ReclamacionesContratos__c.field-meta.xml
<CustomField>
    <fullName>SEG_ReclamacionesContratos__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reclamaciones Contratos</label>
    <referenceTo>SEG_Reclamaciones__c</referenceTo>
    <relationshipLabel>Clasificaciones Rápidas</relationshipLabel>
    <relationshipName>Clasificaci_n_R_pida</relationshipName>
    <type>Lookup</type>
</CustomField>