force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_Regladeclasificacion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Regladeclasificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regla de clasificación</label>
    <referenceTo>SEG_Regladeclasificacion__c</referenceTo>
    <relationshipLabel>Clasificación Rápida</relationshipLabel>
    <relationshipName>SEG_Regla_CR</relationshipName>
    <type>Lookup</type>
</CustomField>