force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_Tematica__c.field-meta.xml
<CustomField>
    <fullName>SEG_Tematica__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Temática</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR (1 AND 4 AND 5)</booleanFilter>
        <errorMessage>El negocio de la CR debe concordar con el tipo cliente del MCC.</errorMessage>
        <filterItems>
            <field>CC_MCC__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>A - Temática</value>
        </filterItems>
        <filterItems>
            <field>CC_MCC__c.CC_Tipo_Cliente__c</field>
            <operation>equals</operation>
            <value>Segmentos</value>
        </filterItems>
        <filterItems>
            <field>$Source.CBK_Negocio__c</field>
            <operation>equals</operation>
            <value>Segmentos</value>
        </filterItems>
        <filterItems>
            <field>CC_MCC__c.CC_Tipo_Cliente__c</field>
            <operation>equals</operation>
            <value>Cliente (COPS)/Empleado (COPS) , Cliente (COPS), Empleado (COPS)</value>
        </filterItems>
        <filterItems>
            <field>$Source.CBK_Negocio__c</field>
            <operation>equals</operation>
            <value>Cops</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipLabel>Clasificación Rápida</relationshipLabel>
    <relationshipName>SEG_ClasificacionRapida_Tematica</relationshipName>
    <type>Lookup</type>
</CustomField>