force-app/main/default/objects/SEG_ClasificacionRapida__c/fields/SEG_TPMV__c.field-meta.xml
<CustomField>
    <fullName>SEG_TPMV__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <label>TPMV</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>