force-app/main/default/objects/SEG_ClasificacionRapida__c/validationRules/SAC_EstadoRecCons.validationRule-meta.xml
<ValidationRule>
    <fullName>SAC_EstadoRecCons</fullName>
    <active>true</active>
    <description>Validation rule para que dependiendo del valor que se elija en el campo Aplicar en (SAC_Target__c), solo se pueda poner el estado corresponiente (si es Reclamación, estado de reclamación. Si es consulta, estado de consulta)</description>
    <errorConditionFormula>OR(
				AND(ISPICKVAL(SAC_Target__c, &apos;SAC_Reclamacion&apos;),
								ISPICKVAL(OS_EstadoCaso__c, &apos;SAC_013&apos;)
								)
				,
				AND(ISPICKVAL(SAC_Target__c, &apos;SAC_Consulta&apos;),
								ISPICKVAL(OS_EstadoCaso__c, &apos;Rechazado&apos;)
								)
			)</errorConditionFormula>
    <errorMessage>El valor del estado no corresponde con el tipo de caso seleccionado en el campo &quot;Aplicar en&quot;</errorMessage>
</ValidationRule>