force-app/main/default/objects/SEG_ClasificacionRapida__c/validationRules/SEG_Contratos.validationRule-meta.xml
<ValidationRule>
    <fullName>SEG_Contratos</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND ( SEG_CRContratos__c = TRUE,  ISBLANK (SEG_ReclamacionesContratos__c)),
				AND (NOT (ISBLANK( SEG_ReclamacionesContratos__c)), SEG_CRContratos__c = FALSE))</errorConditionFormula>
    <errorMessage>Si la CR es de Contratos hay que informar la Reclamación, y al revés.</errorMessage>
</ValidationRule>