force-app/main/default/objects/SEG_ClasificacionRapida__c/validationRules/SEG_ValidationDetalle.validationRule-meta.xml
<ValidationRule>
    <fullName>SEG_ValidationDetalle</fullName>
    <active>true</active>
    <errorConditionFormula>AND( SEG_Motivo__c &lt;&gt; SEG_Detalle__r.CC_Motivo__c, ! ISBLANK( SEG_Detalle__c))</errorConditionFormula>
    <errorDisplayField>SEG_Detalle__c</errorDisplayField>
    <errorMessage>Se debe añadir un Detalle que pertenezca al Motivo seleccionado.</errorMessage>
</ValidationRule>