force-app/main/default/objects/SEG_ClasificacionRapida__c/validationRules/SEG_ValidationMotivo.validationRule-meta.xml
<ValidationRule>
    <fullName>SEG_ValidationMotivo</fullName>
    <active>true</active>
    <errorConditionFormula>AND( SEG_Producto__c &lt;&gt; SEG_Motivo__r.CC_Producto_Servicio__c, ! ISBLANK( SEG_Motivo__c))</errorConditionFormula>
    <errorDisplayField>SEG_Motivo__c</errorDisplayField>
    <errorMessage>Se debe añadir un Motivo que pertenezca al Producto seleccionado.</errorMessage>
</ValidationRule>