force-app/main/default/objects/SEG_ClasificacionRapida__c/validationRules/SEG_ValidationProducto.validationRule-meta.xml
<ValidationRule>
    <fullName>SEG_ValidationProducto</fullName>
    <active>true</active>
    <errorConditionFormula>SEG_Tematica__c &lt;&gt; SEG_Producto__r.CC_Tematica__c</errorConditionFormula>
    <errorDisplayField>SEG_Producto__c</errorDisplayField>
    <errorMessage>Se debe añadir un Producto que pertenezca a la Temática seleccionada.</errorMessage>
</ValidationRule>