force-app/main/default/objects/SEG_ClasificacionRapida__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SEG_Tematica__c</columns>
    <columns>SEG_Producto__c</columns>
    <columns>SEG_Motivo__c</columns>
    <columns>SEG_Detalle__c</columns>
    <columns>SEG_Inactiva__c</columns>
    <columns>SEG_CRAuditoria__c</columns>
    <columns>SEG_CRContratos__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>