force-app/main/default/objects/SEG_ClasificacionRapida__c/listViews/Clasificaciones_R_pidas_COPS.listView-meta.xml
<ListView>
    <fullName>Clasificaciones_R_pidas_COPS</fullName>
    <columns>NAME</columns>
    <columns>SEG_Tematica__c</columns>
    <columns>SEG_Producto__c</columns>
    <columns>SEG_Motivo__c</columns>
    <columns>OS_Causa__c</columns>
    <columns>OS_Solucion__c</columns>
    <columns>OS_GrupoTrabajo__c</columns>
    <columns>OS_EstadoCaso__c</columns>
    <columns>SEG_Prioridad__c</columns>
    <columns>SEG_Inactiva__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CBK_Negocio__c</field>
        <operation>equals</operation>
        <value>Cops</value>
    </filters>
    <label>Clasificaciones Rápidas COPS</label>
    <sharedTo>
        <role>COPS</role>
    </sharedTo>
</ListView>