force-app/main/default/objects/SEG_ClasificacionRapida__c/listViews/Clasificaciones_Rapidas_EFECTIVO.listView-meta.xml
<ListView>
    <fullName>Clasificaciones_Rapidas_EFECTIVO</fullName>
    <columns>NAME</columns>
    <columns>SEG_Tematica__c</columns>
    <columns>SEG_Producto__c</columns>
    <columns>SEG_Motivo__c</columns>
    <columns>OS_Causa__c</columns>
    <columns>OS_Solucion__c</columns>
    <columns>OS_GrupoTrabajo__c</columns>
    <columns>OS_EstadoCaso__c</columns>
    <columns>SEG_Prioridad__c</columns>
    <columns>SEG_Inactiva__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OS_Departamento__c</field>
        <operation>equals</operation>
        <value>EFECTIVO</value>
    </filters>
    <label>Clasificaciones Rápidas EFECTIVO</label>
    <sharedTo>
        <group>OS_EFECTIVO</group>
    </sharedTo>
</ListView>