force-app/main/default/objects/SEG_ClasificacionRapida__c/listViews/SAC_CR_LV.listView-meta.xml
<ListView>
    <fullName>SAC_CR_LV</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CBK_Negocio__c</field>
        <operation>equals</operation>
        <value>SAC</value>
    </filters>
    <label>SAC</label>
    <sharedTo>
        <role>SAC_General</role>
    </sharedTo>
</ListView>