force-app/main/default/objects/SEG_ClasificacionRapida__c/listViews/SEG_CRAuditorias.listView-meta.xml
<ListView>
    <fullName>SEG_CRAuditorias</fullName>
    <columns>NAME</columns>
    <columns>SEG_Tematica__c</columns>
    <columns>SEG_Producto__c</columns>
    <columns>SEG_Motivo__c</columns>
    <columns>SEG_Detalle__c</columns>
    <columns>SEG_Inactiva__c</columns>
    <columns>SEG_CRAuditoria__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SEG_CRAuditoria__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>CR Auditorías</label>
</ListView>